[tool.poetry]
name = "src"
version = "0.1.0"
description = "penguins-dashboard example in docker"
authors = ["Aleksei Bogachev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
numpy = "^1"
python = "^3.11"
pandas = "^1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
click = "^8.1.7"
notebook = "^6"
dvc = {extras = ["gdrive"], version = "^3.47.0"}
python-dotenv = "^1.0.1"
kaggle = "^1.6.6"
missingno = "^0.5.2"
geopandas = "^0.14.4"
plotly = "^5.22.0"
dash = "^2.17.0"
ipywidgets = "^8.1.2"
kaleido = "0.2.1"
plotly-geo = "^1.0.0"
statsmodels = "^0.14.2"
shiny = "^1"
shinywidgets = "^0.3.2"
faicons = "^0.2.2"
ridgeplot = "^0.1.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

